feat: implementacao de testes e melhoria na query para retornar por placa ou renavam